service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: metabase
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: metabase
